<resources>
    <string name="app_name">Bank</string>
    <string name="str">WorldSkills Bank</string>
    <string name="str1">Отделения и банкоматы</string>
    <string name="str2">Курсы валют</string>
    <string name="val1">USD</string>
    <string name="val2">EUR</string>
    <string name="date">31.12.2018</string>
    <string name="val1_1">65.2</string>
    <string name="val2_2">75.14</string>
    <string name="btn">ВОЙТИ</string>
    <string name="message">Авторизация</string>
    <string name="tint">Введите Ваш логин и пароль</string>
    <string name="ok">OK</string>
    <string name="otm">Отмена</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>

    <string name="action_settings">Settings</string>

    <string name="usaUSD">USD</string>
    <string name="usa">Американский доллар</string>
    <string name="shop_sell">64,95</string>

    <string name="dd1">Москва, ул. Вавилова, д. 7</string>
    <string name="dd2">Банкомат</string>
    <string name="dd3">Работает</string>
    <string name="dd4">Часы работы 00:00-00:00</string>

    <string name="main1">Отделения и банкоматы</string>
    <string name="main2">31.12.2018</string>
    <string name="main21">Покупка</string>
    <string name="main22">Продажа</string>

    <string name="flag">flag</string>
</resources>