<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon2"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button6"
        android:layout_width="370dp"
        android:layout_height="110dp"
        android:layout_marginTop="67dp"
        android:backgroundTint="@color/blue"
        android:onClick="onClick"
        android:text="@string/btn"
        android:textSize="20dp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="65dp"
        android:layout_height="70dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="258dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icons8_museum" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <Button
            android:id="@+id/button"
            android:layout_width="370dp"
            android:layout_height="110dp"
            android:backgroundTint="@color/white"
            android:onClick="onClick1"
            android:text="@string/str1"
            android:textColor="@color/black"
            android:textSize="18dp"
            app:cornerRadius="10dp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="19dp"
            android:layout_height="49dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/qwe2" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:text="@string/str"
        android:textColor="@color/wr"
        android:textSize="35dp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <Button
            android:id="@+id/button5"
            android:layout_width="370dp"
            android:layout_height="110dp"
            android:backgroundTint="@color/white"
            android:onClick="onClick2"
            android:paddingEnd="120dp"
            android:paddingBottom="55dp"
            android:text="@string/str2"
            android:textColor="@color/black"
            android:textSize="18dp"
            app:cornerRadius="10dp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="32dp"
            android:layout_height="37dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            app:srcCompat="@drawable/money2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="70dp"
            android:text="@string/val1" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="73dp"
            android:layout_marginTop="70dp"
            android:hint="@string/val1_1" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="280dp"
            android:layout_marginTop="70dp"
            android:text="@string/val2" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="307dp"
            android:layout_marginTop="70dp"
            android:hint="@string/val2_2" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="290dp"
            android:layout_marginTop="20dp"
            android:hint="@string/date"
            android:textSize="12dp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>