<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:background="@drawable/listview_selector">

    <ImageView
        android:id="@+id/flagImage"
        android:src="@drawable/us"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/flag"
        android:layout_gravity="center_vertical"/>

    <TextView
        android:id="@+id/abbreviation"
        android:layout_width="52dp"
        android:layout_height="30dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="0dp"
        android:text="@string/usaUSD"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="26dp"
        android:gravity="center"
        android:singleLine="false"
        android:text="@string/usa"
        android:textColor="@color/blue"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/capital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="190dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/blue"
        android:text="@string/shop_sell"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/capital2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="330dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/blue"
        android:text="@string/shop_sell"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="226dp"
        app:srcCompat="@drawable/up" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="365dp"
        app:srcCompat="@drawable/down" />

</RelativeLayout>